// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Default Nav List - Trigger item active update 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-4"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-13"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-14"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-15"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-16"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Default Nav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav test-nav-class"
    data-ouia-component-id="OUIA-Generated-Nav-1"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list test-nav-list-class"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-1"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-2"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-3"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-4"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Expandable Nav List - Trigger toggle 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-1"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item expandable-group"
        data-ouia-component-id="OUIA-Generated-NavExpandable-1"
        data-ouia-component-type="PF6/NavExpandable"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          class="pf-v6-c-nav__link"
          id="grp-1"
        >
          Section 1
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="grp-1"
          class="pf-v6-c-nav__subnav"
          hidden=""
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-1"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link1"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 1
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-2"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link2"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 2
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-3"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link3"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 3
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-4"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link4"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 4
                </span>
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Expandable Nav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-5"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavExpandable-1"
        data-ouia-component-type="PF6/NavExpandable"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          class="pf-v6-c-nav__link"
          id="grp-1"
        >
          Section 1
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="grp-1"
          class="pf-v6-c-nav__subnav"
          hidden=""
        >
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-17"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link1"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 1
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-18"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link2"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 2
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-19"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link3"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 3
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-20"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link4"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 4
                </span>
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Expandable Nav List with aria label 1`] = `
<DocumentFragment>
  <nav
    aria-label="Test"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-7"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavExpandable-3"
        data-ouia-component-type="PF6/NavExpandable"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          class="pf-v6-c-nav__link"
        >
          Section 1
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="grp-1"
          class="pf-v6-c-nav__subnav"
          hidden=""
        >
          <h2
            class="pf-v6-screen-reader"
            id="grp-1"
          >
            Section 1 - Example sub-navigation
          </h2>
          <ul
            class="pf-v6-c-nav__list"
            role="list"
          >
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-25"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link1"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 1
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-26"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link2"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 2
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-27"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link3"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 3
                </span>
              </a>
            </li>
            <li
              class="pf-v6-c-nav__item"
              data-ouia-component-id="OUIA-Generated-NavItem-28"
              data-ouia-component-type="PF6/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-v6-c-nav__link"
                href="#link4"
              >
                <span
                  class="pf-v6-c-nav__link-text"
                >
                  Link 4
                </span>
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Horizontal Nav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav pf-m-horizontal"
    data-ouia-component-id="OUIA-Generated-Nav-horizontal-1"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-37"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-38"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-39"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-40"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Horizontal SubNav List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Local"
    class="pf-v6-c-nav pf-m-horizontal pf-m-subnav"
    data-ouia-component-id="OUIA-Generated-Nav-horizontal-subnav-1"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-41"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-42"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-43"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item"
        data-ouia-component-id="OUIA-Generated-NavItem-44"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Nav Grouped List 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-8"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <section
      aria-labelledby="grp-1"
      class="pf-v6-c-nav__section"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="grp-1"
      >
        Section 1
      </h2>
      <ul
        class="pf-v6-c-nav__list"
        role="list"
      >
        <ul
          class="pf-v6-c-nav__list"
          role="list"
        >
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-29"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link1"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 1
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-30"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link2"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 2
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-31"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link3"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 3
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-32"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link4"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 4
              </span>
            </a>
          </li>
        </ul>
      </ul>
    </section>
    <section
      aria-labelledby="grp-2"
      class="pf-v6-c-nav__section"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="grp-2"
      >
        Section 2
      </h2>
      <ul
        class="pf-v6-c-nav__list"
        role="list"
      >
        <ul
          class="pf-v6-c-nav__list"
          role="list"
        >
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-33"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link1"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 1
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-34"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link2"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 2
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-35"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link3"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 3
              </span>
            </a>
          </li>
          <li
            class="pf-v6-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-36"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link"
              href="#link4"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Link 4
              </span>
            </a>
          </li>
        </ul>
      </ul>
    </section>
  </nav>
</DocumentFragment>
`;

exports[`Nav Nav List with custom item nodes 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-9"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-45"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <div
          class="pf-v6-c-nav__link my-custom-node"
        >
          My custom node
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Nav Nav List with flyout 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav"
    data-ouia-component-id="OUIA-Generated-Nav-10"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item pf-m-flyout test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-46"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <div
          class="pf-v6-c-nav__link my-custom-node"
        >
          My custom node
          <span
            class="pf-v6-c-nav__toggle"
          >
            <span
              class="pf-v6-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </div>
      </li>
    </ul>
    <div
      class=""
      data-popper-escaped="true"
      data-popper-placement="right-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 1; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px; transform: translate(0px, 0px);"
    >
      <div>
        Flyout test
      </div>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`Nav Renders nav list in strict mode 1`] = `
<DocumentFragment>
  <nav
    aria-label="Global"
    class="pf-v6-c-nav test-nav-class"
    data-ouia-component-id="OUIA-Generated-Nav-3"
    data-ouia-component-type="PF6/Nav"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v6-c-nav__list test-nav-list-class"
      role="list"
    >
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-6"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link1"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 1
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-8"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link2"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 2
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-10"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link3"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 3
          </span>
        </a>
      </li>
      <li
        class="pf-v6-c-nav__item test-nav-item-class"
        data-ouia-component-id="OUIA-Generated-NavItem-12"
        data-ouia-component-type="PF6/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-v6-c-nav__link test-nav-item-class"
          href="#link4"
        >
          <span
            class="pf-v6-c-nav__link-text"
          >
            Link 4
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
